<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page_s"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clipToOutline="true">

    <TextView
        android:id="@+id/logout"
        style="@style/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/size_12"
        android:layout_marginTop="@dimen/size_32"
        android:background="@drawable/rectangle_7"
        android:drawablePadding="@dimen/size_7"
        android:fontFamily="@font/inter"
        android:paddingHorizontal="@dimen/size_7"
        android:paddingVertical="@dimen/size_4"
        android:text="@string/logout"
        app:drawableStartCompat="@drawable/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_89"
        android:background="@drawable/homepageicon"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:maxHeight="40dp"
        android:text="@string/course_1_ho"
        android:textAppearance="@style/course_1_ho"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgIcon" />

    <TextView
        android:id="@+id/course_id_1"
        style="@style/course_id_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:fontFamily="@font/inter"
        android:text="@string/course_id_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_homepage"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_7"
        android:fontFamily="@font/inter"
        android:text="@string/teacher_use"
        android:textAppearance="@style/teacher_use"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_id_1" />

    <TextView
        android:id="@+id/take_attend"
        style="@style/take_attend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_57"
        android:background="@drawable/rectangle_8"
        android:drawablePadding="@dimen/size_7"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:paddingHorizontal="@dimen/size_7"
        android:paddingVertical="@dimen/size_14"
        android:text="@string/take_attend"
        app:drawableEndCompat="@drawable/take_att"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username2" />

    <TextView
        android:id="@+id/lectures_hi"
        style="@style/lectures_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_49"
        android:background="@drawable/rectangle_8"
        android:drawablePadding="@dimen/size_7"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:paddingHorizontal="@dimen/size_7"
        android:paddingVertical="@dimen/size_14"
        android:text="@string/lectures_hi"
        app:drawableEndCompat="@drawable/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/take_attend" />


    <TextView
        android:id="@+id/students_me"
        style="@style/students_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_49"
        android:background="@drawable/rectangle_8"
        android:drawablePadding="@dimen/size_7"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:paddingHorizontal="@dimen/size_7"
        android:paddingVertical="@dimen/size_14"
        android:text="@string/students_me"
        app:drawableEndCompat="@drawable/matr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lectures_hi"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>
