<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clipToOutline="true">

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:background="@drawable/rectangle_77"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="22sp"
        android:text="@string/logout"
        android:textAppearance="@style/logout"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_7"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7"
        app:layout_constraintVertical_bias="0.545" />

    <RelativeLayout
        android:id="@+id/bx_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logout"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toStartOf="@+id/logout"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />


    <RelativeLayout
        android:id="@+id/healthicons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/exam"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="33sp"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/healthicons"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/healthicons"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/attendance_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="33sp"
        android:text="@string/attendance_1"
        android:textAppearance="@style/attendance_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_to_"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="@+id/welcome_to_"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to_"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/exam_name_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="19sp"
        android:text="@string/exam_name_e"
        android:textAppearance="@style/exam_name_e"
        app:layout_constraintEnd_toEndOf="@+id/attendance_"
        app:layout_constraintStart_toStartOf="@+id/attendance_"
        app:layout_constraintTop_toBottomOf="@+id/attendance_" />


    <TextView
        android:id="@+id/exam_name_e1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="19sp"
        android:text="@string/exam_id_123"
        android:textAppearance="@style/exam_id_123"
        app:layout_constraintEnd_toEndOf="@+id/exam_name_e"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/exam_name_e"
        app:layout_constraintTop_toBottomOf="@+id/exam_name_e" />

    <TextView
        android:id="@+id/date_dd_mm_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="19sp"
        android:text="@string/date_dd_mm_"
        android:textAppearance="@style/date_dd_mm_"
        app:layout_constraintEnd_toEndOf="@+id/exam_name_e1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/exam_name_e1"
        app:layout_constraintTop_toBottomOf="@+id/exam_name_e1" />

    <TextView
        android:id="@+id/time_10_00_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="19sp"
        android:text="@string/time_10_00_"
        android:textAppearance="@style/time_10_00_"
        app:layout_constraintEnd_toEndOf="@+id/date_dd_mm_"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/date_dd_mm_"
        app:layout_constraintTop_toBottomOf="@+id/date_dd_mm_" />

    <TextView
        android:id="@+id/exam_invigi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="19sp"
        android:text="@string/exam_invigi"
        android:textAppearance="@style/exam_invigi"
        app:layout_constraintEnd_toEndOf="@+id/time_10_00_"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time_10_00_"
        app:layout_constraintTop_toBottomOf="@+id/time_10_00_" />

    <TextView
        android:id="@+id/password_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/password_"
        android:textAppearance="@style/password_"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rectangle_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="@+id/exam_invigi"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="@+id/exam_invigi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906"
        app:passwordToggleEnabled="true">

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/icon_lock_l"
        android:layout_width="22dp"
        android:layout_height="25.67dp"
        android:background="@drawable/icon22"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toStartOf="@+id/enter_your_1"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="272.79dp"
        android:layout_height="92dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="58sp"
        android:text="@string/sign_in1"
        android:textAppearance="@style/sign_in1"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4" />

    <TextView
        android:id="@+id/there_are_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="19sp"
        android:visibility="invisible"
        android:text="@string/there_are_n"
        android:textAppearance="@style/there_are_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/healthicons"
        app:layout_constraintStart_toStartOf="@+id/healthicons"
        app:layout_constraintTop_toBottomOf="@+id/healthicons"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/held_in_tha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:visibility="invisible"
        android:lineHeight="19sp"
        android:text="@string/held_in_tha"
        android:textAppearance="@style/held_in_tha"
        app:layout_constraintEnd_toEndOf="@+id/there_are_n"
        app:layout_constraintStart_toStartOf="@+id/there_are_n"
        app:layout_constraintTop_toBottomOf="@+id/there_are_n" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enter_your_1"
        android:layout_width="224dp"
        android:layout_height="37dp"
        android:fontFamily="@font/inter"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:lineHeight="17sp"
        android:paddingTop="0dp"
        android:textAppearance="@style/enter_your_1"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3" />


</androidx.constraintlayout.widget.ConstraintLayout>