<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/take_attend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FCFCFC">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/solar_check"
        android:layout_centerHorizontal="true"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:clipToOutline="true"
        android:background="@drawable/att"
        />
    <TextView
        android:id="@+id/take"
        android:layout_width="228dp"
        android:layout_height="33dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="179dp"
        android:text="@string/take_attend"
        android:textAppearance="@style/take"
        android:gravity="top"
        android:fontFamily="@font/inter"
        android:lineHeight="33sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/please_cho"
        android:layout_width="262dp"
        android:layout_height="19dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:text="@string/please_cho"
        android:textAppearance="@style/please_cho"
        android:gravity="top"
        android:fontFamily="@font/inter"
        android:lineHeight="19sp"
        />
    <TextView
        android:id="@+id/attendance_"
        android:layout_width="123dp"
        android:layout_height="19dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="239dp"
        android:text="@string/attendance_"
        android:textAppearance="@style/attendance_"
        android:gravity="top"
        android:fontFamily="@font/inter"
        android:lineHeight="19sp"
        />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="329.81dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="317dp"
        android:background="@drawable/rectangle_44" />

    <TextView
        android:id="@+id/nfc"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="327dp"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="51sp"
        android:text="@string/nfc"
        android:textAppearance="@style/nfc" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/iconoir_han"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="322dp"
        android:background="@drawable/hand_card"
        android:clipToOutline="true" />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="329.81dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="453dp"
        android:background="@drawable/rectangle_55" />

    <TextView
        android:id="@+id/manually"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="469dp"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineHeight="42sp"
        android:text="@string/manually"
        android:textAppearance="@style/manually" />
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mdi_hand_ta"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="457dp"
        android:clipToOutline="true"
        android:background="@drawable/hand_tap"
        />
    <View
        android:id="@+id/rectangle_22"
        android:layout_width="255.21dp"
        android:layout_height="81dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="616dp"
        android:background="@drawable/rectangle_22"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/finish"
        android:layout_width="143dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="628dp"
        android:text="@string/finish"
        android:textAppearance="@style/finish"
        android:gravity="top"
        android:fontFamily="@font/inter"
        android:lineHeight="58sp"
        android:textStyle="bold"
        android:visibility="invisible"
        />



</RelativeLayout>